Finalized platformer game

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <!-- All content goes here -->
     <div id="all-contents" class="max-w-4xl mx-auto">
-   <nav class="bg-blue-500 p-4 rounded-lg mb-4 shadow-md">
-  <div class="flex justify-between items-center">
+   <nav class="bg-red-500 p-4 rounded-lg mb-4 shadow-md">
+    <div class="flex justify-between items-center">
     <h1 class="text-white text-2xl font-bold">Vital</h1>
     <ul class="flex space-x-4">
       <li>
@@ -68,5 +68,5 @@
     </div>
   
   </body>
-   <img class="sidebar-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR5leCAO3XhZh7p8t1iq_wjRr_eoonkXRyohLfQuVUvCN_CobZf:https://c.imgz.jp/036/74959036/74959036b_b_39_500.jpg&s">
-</html>
+  <img class="sidebar-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR5leCAO3XhZh7p8t1iq_wjRr_eoonkXRyohLfQuVUvCN_CobZf:https://c.imgz.jp/036/74959036/74959036b_b_39_500.jpg&s">
+  </html>
