--- a/portfolio.html
+++ b/portfolio.html
@@ -2,13 +2,14 @@
 <html>
   <head>
     <title>Dante</title>
-    <link rel="stylesheet" href="style.css" />
+      <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <!-- All content goes here -->
    <div id="all-contents">
-  <nav><h1>
+  <nav>
+    <h1>
     <ul id="nav-ul">
 <li class="nav-li">
   <a href="index.html">Home</a>
