--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -42,7 +42,8 @@
         var box = jQuery(".box"); // reference to the HTML .box element
         var board = jQuery(".board"); // reference to the HTML .board element
         var boardWidth = board.width(); // the maximum X-Coordinate of the screen
-
+        var positionX = 0;
+        var points = 0
         // update the boardWidth variable when the window is resized
         jQuery(window).on("resize", function () {
           boardWidth = board.width();
@@ -52,7 +53,9 @@
         setInterval(update, 50);
 
         // Every time the box is clicked, call the handleBoxClick Function (see below)
-        box.on("click", handleBoxClick);
+        box.on("click", handleBoxClick positionX); 
+        var points = points + 1;
+
 
         // moves the Box to a new position on the screen along the X-Axis
         function moveBoxTo(newPositionX) {
@@ -60,15 +63,15 @@
         }
 
         // changes the text displayed on the Box
-        function changeBoxText(newText) {
+        function changeBoxText(points = 0) {
           box.text(newText);
         }
 
         //////////////////////////////////////////////////////////////////
         /////////////////// YOUR CODE BELOW HERE /////////////////////////
         //////////////////////////////////////////////////////////////////
-
         // TODO 2 - Variable declarations
+        var position = 0;
 
 
 
@@ -80,9 +83,8 @@
          * If the box drifts off the screen, turn it around!
          */
         function update() {
-
-        
-
+     positionX = positionX + 10;        
+     moveBoxTo(positionX); // Moves box to x position 200
           
         }
 
@@ -93,7 +95,7 @@
          * - increase the speed
          * - move the box to the left side of the screen.
          */
-        function handleBoxClick() {
+        function handleBoxClick(positionX+=0) {
 
 
 
