--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       <li>
         <a href="portfolio.html" class="text-white hover:text-blue-200 px-3 py-2 rounded">Portfolio</a>
       </li>
+      <li>
+        <a href="images.html" class="text-white hover:text-blue-200 px-3 py-2 rounded">Images</a>
+      </li>
     </ul>
   </div>
 </nav>
